Bugfix: align-left for catalog header

--- a/source/sass/blocks/catalog-page.scss
+++ b/source/sass/blocks/catalog-page.scss
@@ -1,6 +1,5 @@
 .catalog-page {
-  display: flex;
-  flex-direction: column;
+  display: block;
 
   &__title {
     font-size: 36px;
